--- a/k8s/manifests/deployment.yaml
+++ b/k8s/manifests/deployment.yaml
@@ -17,6 +17,8 @@ spec:
     spec:
       containers:
       - name: go-web-app
-        image: demo.goharbor.io/harbor_flux/go-web-app
+        image: demo.goharbor.io/harbor_flux/go-web-app:13011749734
         ports:
         - containerPort: 8080
+      imagePullSecrets:
+        - name: harbor-credentials
