--- a/k8s/manifests/kustomization.yaml
+++ b/k8s/manifests/kustomization.yaml
@@ -1,4 +1,14 @@
-resources:
-  - deployment.yaml
-  - service.yaml
-  - ingress.yaml
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: go-web-app
+  namespace: harbor
+spec:
+  interval: 1m0s
+  resources:
+    - deployment.yaml
+    - service.yaml
+    - ingress.yaml
+  images:
+    - name: demo.goharbor.io/harbor_flux/go-web-app
+      newTag: "{{ .ImageRef }}"  # Flux will update this image with new tag when available
